[gd_scene load_steps=4 format=3 uid="uid://y6tia1lfi0dv"]

[ext_resource type="Script" uid="uid://gk8dul0iippg" path="res://game/ui/inventory_ui/merch_inventory_ui/merch_item_row.gd" id="1_7doio"]
[ext_resource type="Texture2D" uid="uid://bex3olphhyj42" path="res://assets/images/spooky romance action merch spritesheet.png" id="1_86h52"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g4fak"]
atlas = ExtResource("1_86h52")
region = Rect2(0, 0, 16, 16)

[node name="MerchItemRow" type="Control"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_7doio")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="MarginContainer/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = SubResource("AtlasTexture_g4fak")

[node name="MerchNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "test"

[node name="MerchAmountLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
text = "4"
horizontal_alignment = 1
